Fix navigational scrolling on mobile (#260)
* Fix navigational scrolling on mobile; --mq-m shouldn't only be "lt"

* Prevent horizontal scroll of the mobile nav

* Add overflow touch scrolling to mobile nav container

Closes BLUED-111

--- a/client/src/components/Navigation/MobileNav/Category/styles.module.css
+++ b/client/src/components/Navigation/MobileNav/Category/styles.module.css
@@ -8,6 +8,7 @@
     bottom: 0;
     left: 0;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
 
     & > div:last-child .products {
         padding-bottom: 3rem;
