--- a/client/src/components/Navigation/MobileNav/Products/styles.module.css
+++ b/client/src/components/Navigation/MobileNav/Products/styles.module.css
@@ -14,6 +14,8 @@
     flex-direction: column;
     list-style-type: none;
     background-color: var(--c--white);
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .tile {
