--- a/client/src/pages/BrandCategory/Hero/styles.module.css
+++ b/client/src/pages/BrandCategory/Hero/styles.module.css
@@ -108,6 +108,7 @@
         }
 
         @media (--mq-s) {
+            margin-bottom: 0;
             max-height: 17.5rem;
         }
     }
