--- a/client/src/pages/Home/styles.module.css
+++ b/client/src/pages/Home/styles.module.css
@@ -174,6 +174,7 @@
     }
 
     @media (--mq-s) {
+        top: 5rem;
         justify-content: flex-start;
     }
 }
